[project]
name = "dashdotdb"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  # from setup.py
  "connexion[swagger-ui] ~= 2.14",
  "Flask ~= 1.1",
  "flask-healthz ~= 0.0.3",
  "Flask-Migrate ~= 2.7",
  "Flask-SQLAlchemy ~= 2.5",
  "SQLAlchemy ~= 1.4.48",
  "psycopg2-binary ~= 2.9",
  "prometheus-client ~= 0.14",
  "gunicorn ~=23.0",
  "openapi-schema-validator ~=0.6.2",
  "jsonschema ~=4.23",
  # Newer versions are not compatible with our Flask version
  "markupsafe ==2.1.5",
]
license-files = [ "LICENSE" ]
authors = [{ name = "Red Hat App-SRE Team", email = "sd-app-sre@redhat.com" }]
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "GNU General Public License v2 or later (GPLv2+)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9"
]

[dependency-groups]
dev = [
  # required for mypy
  "types-psycopg2",
  "types-Flask-Migrate",
  "types-gevent",
  "types-pyOpenSSL",
  "types-setuptools",
  # from requirements-check.txt
  "flake8==7.3.0",
  "pylint~=3.3",
  "mypy==1.16.1",
  "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools"]

[tool.flake8]
max-line-length = 88

[tool.mypy]
files = ["dashdotdb"]
no_implicit_optional = true
enable_error_code = ["truthy-bool", "redundant-expr"]
plugins = [ "sqlalchemy.ext.mypy.plugin" ]

# More context here: https://github.com/python/mypy/issues/9091
[[tool.mypy.overrides]]
module = [
  "flask_sqlalchemy.*",
  "sqlalchemy.*",
  "connexion.exceptions.*",
  "prometheus_client.*",
  "flask_migrate.*",
  "connexion.*",
  "flask.*",
  "psycopg2.*",
]
ignore_missing_imports = true

[tool.setuptools]
py-modules = []
